--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ten-thousand-feet",
   "version": "1.0.0",
-  "description": "A high-level overview of your day's phyical and coding activity.",
+  "description": "A high-level overview of your day's physical and coding activity.",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
