--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "A high-level overview of your day's physical and coding activity.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "author": "Andrew Garcia",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "d3": "^4.4.0",
+    "express": "^4.14.0",
+    "path": "^0.12.7"
+  }
 }
