--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "d3": "^4.4.0",
     "express": "^4.14.0",
+    "materialize-css": "^0.97.8",
     "path": "^0.12.7"
   }
 }
