--- a/package.json
+++ b/package.json
@@ -5,14 +5,30 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "build": "webpack --config webpack.config.js --watch"
   },
   "author": "Andrew Garcia",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "d3": "^4.4.0",
     "express": "^4.14.0",
     "materialize-css": "^0.97.8",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-redux": "^5.0.1",
+    "react-router": "^3.0.0",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-thunk": "^2.1.0",
+    "volleyball": "^1.4.1"
+  },
+  "devDependencies": {
+    "webpack": "^1.14.0"
   }
 }
