--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "cors": "^2.8.1",
     "d3": "^4.4.0",
     "express": "^4.14.0",
     "materialize-css": "^0.97.8",
@@ -27,7 +28,8 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
-    "volleyball": "^1.4.1"
+    "volleyball": "^1.4.1",
+    "wakatime-promise": "^0.3.0"
   },
   "devDependencies": {
     "webpack": "^1.14.0"
