--- a/package.json
+++ b/package.json
@@ -16,10 +16,16 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "body-parser": "^1.15.2",
     "cors": "^2.8.1",
     "d3": "^4.4.0",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
+    "https": "^1.0.0",
+    "jawbone-up": "^0.1.2",
     "materialize-css": "^0.97.8",
+    "passport": "^0.3.2",
+    "passport-oauth": "^1.0.0",
     "path": "^0.12.7",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
